# dfim

./: .gitignore  Cargo.toml  README.md  build.rs
lua/: inspect.lua
src/: cli.rs  config.rs  lua.rs  macros.rs  main.rs  repl.rs  source.rs
src/commands/: lua.rs  mod.rs  version.rs
src/lua/: consts.rs  json.rs  logging.rs  mod.rs  plugin.rs  repl.rs  shared.rs  source.rs  system.rs  traits.rs
src/lua/api/: json.rs  mod.rs  shared.rs  system.rs
