[package]
name = "dfim"
version = "0.1.0"
edition = "2021"
authors = ["bwpge <bwpge.dev@gmail.com>"]
description = "Dotfiles improved: a hackable, cross-platform dotfile manager"
homepage = "https://github.com/bwpge/dfim"
documentation = "https://github.com/bwpge/dfim"
repository = "https://github.com/bwpge/dfim"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
