[package]
name = "dfim"
version = "0.1.0"
edition = "2021"
authors = ["bwpge <bwpge.dev@gmail.com>"]
description = "Dotfiles improved: a hackable, cross-platform dotfile manager."
homepage = "https://github.com/bwpge/dfim"
documentation = "https://github.com/bwpge/dfim"
repository = "https://github.com/bwpge/dfim"
license = "MIT"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["cargo", "wrap_help", "derive"] }
mlua = { version = "0.9.6", features = ["luajit", "serialize", "vendored"] }
rustyline = "14.0.0"

[build-dependencies]
vergen = { version = "8.3.1", features = ["git", "git2", "cargo"] }
