[package]
name = "dfim"
version = "0.1.0"
edition = "2021"
authors = ["bwpge <bwpge.dev@gmail.com>"]
description = "Dotfiles improved: a hackable, cross-platform dotfile manager."
homepage = "https://github.com/bwpge/dfim"
documentation = "https://github.com/bwpge/dfim"
repository = "https://github.com/bwpge/dfim"
license = "MIT"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["cargo", "wrap_help", "derive"] }
fern = { version = "0.6.2", features = ["colored"] }
home = "0.5.9"
hostname = "0.4.0"
humantime = "2.1.0"
log = "0.4.21"
mlua = { version = "0.9.6", features = ["luajit52", "serialize", "vendored"] }
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
glob = "0.3.1"
mlua = { version = "0.9.6", features = ["luajit52", "vendored"] }
vergen = { version = "8.3.1", features = ["git", "git2", "cargo"] }
